# rula

./: .gitignore  Rula.code-workspace
AI inbox chief of staff/: .env.example  .env.mvp.example  .env.prod.example  .env.staging.example  Caddyfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml  render.yaml  test.db
AI inbox chief of staff/.github/workflows/: ci.yml
AI inbox chief of staff/api/: main.py
AI inbox chief of staff/api/routers/: activity.py  admin.py  assistant.py  auth.py  briefs.py  data_export.py  drafts.py  experiments.py  feedback.py  gold_eval.py  health.py  mailbox_connect.py  mailboxes.py  memories.py  slo.py  undo.py  webhooks.py
AI inbox chief of staff/core/: config.py  db.py
AI inbox chief of staff/core/alerts/: __init__.py  router.py  sinks.py
AI inbox chief of staff/core/email/: attachments.py  ses.py
AI inbox chief of staff/core/gmail/: __init__.py  auth.py  client.py  rate_limiter.py  reputation.py
AI inbox chief of staff/core/gold_eval/: __init__.py  adapter.py  cli.py  sampler.py  scrubber.py  stratifier.py
AI inbox chief of staff/core/llm/: __init__.py  budget.py  cache.py  circuit_breaker.py  client.py  embeddings.py
AI inbox chief of staff/core/mailbox/: __init__.py  backend.py  gmail.py  local.py
AI inbox chief of staff/core/models/: __init__.py  assistant_conversation.py  audit.py  brief.py  draft.py  email.py  experiment.py  feedback.py  gold_sample.py  mailbox.py  memory.py  mutation_ledger.py  triage.py  user.py
AI inbox chief of staff/core/observability/: __init__.py  tracing.py
AI inbox chief of staff/docs/: PRODUCT_ROADMAP.md  backup-restore-drill.md  data-classification.md  deployment-inputs-checklist.md  deployment-vercel-render.md  incident-operations.md  launch-blockers-execution.md  launch-decision-memo-template.md  memory-spec-conformance.md  mvp-qa-readiness-tickets.md  pr-review-checklist.md  quality-gates.md  release-readiness.md  review-template.md  risk-register.md  sandbox-bringup.md  sandbox-compose-verification.md  sandbox-go-live-checklist.md  threat-model.md
AI inbox chief of staff/evals/: __init__.py
AI inbox chief of staff/infra/: otel-collector.yml
AI inbox chief of staff/migrations/: env.py
AI inbox chief of staff/orchestrator/: orchestrator.py
AI inbox chief of staff/scripts/: backup_restore_drill.sh  compose_matrix_check.sh  observability_sanity.sh  sandbox_smoke.sh  verify_migration_gate.sh
AI inbox chief of staff/subagents/: __init__.py  base.py  brief.py  draft.py  eval.py  ingestion.py  memory.py  policy.py  safety.py  telemetry.py  triage.py
AI inbox chief of staff/tests/: conftest.py  test_config_loading.py
AI inbox chief of staff/workers/: audit_export.py  backfill.py  behavioral_signals.py  data_retention.py  dlq_replay.py  draft_tracker.py  gold_fixture_loader.py  gold_sample_extraction.py  ingest_worker.py  memory_decay.py  nightly_eval.py  scheduler.py  style_extraction.py
inbox-chief-of-staff/backend/: .env.example  .env.staging  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
rula-gtm-agent/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
rula-gtm-agent/.streamlit/: config.toml
rula-gtm-agent/codebase-review/: 00_inventory_and_scope.md  01_findings_by_pillar.md  02_risk_assessment_and_critical_fixes.md  03_diff_style_refactors.md  README.md  R_ID_IMPLEMENTATION_SUMMARY.md  Review_Feedback.md  artifacts_pytest_run.txt
rula-gtm-agent/data/: accounts.json  golden_test_set.json  map_evidence.json
rula-gtm-agent/docs/: architecture_overview.md  connector_policies.md  implementation_runbook.md  ingest_contract.md  integration_contracts.md  panel_talk_track.md  prospecting_v2_readiness.md  submission_checklist.md  v1_release_readiness.md  walkthrough.md
rula-gtm-agent/eval/: compare_shadow.py  drift_check.py  eval_prospecting.py  eval_verification.py
rula-gtm-agent/prompts/: README.md
rula-gtm-agent/src/: __init__.py  config.py  landing_bridge.py  main.py
rula-gtm-agent/tests/: test_account_reachability.py  test_atomic_io.py  test_audit.py  test_bulk_map.py  test_bulk_prospecting.py  test_business_context.py  test_circuit_telemetry.py  test_commitment_extractor.py  test_committer_resolver.py  test_config.py  test_connector_policy.py  test_contract_compat.py  test_corrections.py  test_dq_policy.py  test_execution_agent_v4.py  test_explainability.py  test_export_lineage.py  test_handoff.py  test_hardening.py  test_ingestion.py  test_integration.py  test_judge_min_questions.py  test_landing_bridge.py  test_map_calendar_ui.py  test_map_contracts.py  test_map_handoff.py  test_map_sample_combine.py  test_map_slide_flow.py  test_map_verification.py  test_metrics_connectors.py  test_promote_map.py  test_prospecting.py  test_prospecting_slide_flow_v4.py  test_provider_connector_timeouts.py  test_qa_bugfixes.py  test_queue_order.py  test_reliability.py  test_review_fixes.py  test_router.py  test_safety.py  (+7 more)
(+450 files in other folders)
