[tool.poetry]
name = "ai-inbox-chief-of-staff"
version = "0.1.0"
description = "Production-grade AI Inbox Chief of Staff with Gmail integration, intelligent triage, and voice-aligned drafts"
authors = ["Neel Mishra"]
packages = [
  {include = "api"},
  {include = "orchestrator"},
  {include = "subagents"},
  {include = "workers"},
  {include = "core"},
  {include = "evals"},
]

[tool.poetry.dependencies]
python = "^3.11"

# API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# DB / ORM
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pgvector = "^0.3.1"
psycopg2-binary = "^2.9.9"

# Redis
redis = {extras = ["hiredis"], version = "^5.0.4"}

# Queue / AWS
boto3 = "^1.34.0"
botocore = "^1.34.0"

# Google / Gmail
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.130.0"
google-auth-httplib2 = "^0.2.0"

# LLM
anthropic = "^0.28.0"
openai = "^1.30.0"  # fallback provider
tiktoken = "^0.7.0"

# Security
cryptography = "^42.0.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyJWT = "^2.8.0"

# HTTP
httpx = "^0.27.0"
tenacity = "^8.3.0"

# Observability
opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.27.0"
opentelemetry-exporter-otlp-proto-http = "^1.27.0"
opentelemetry-instrumentation-fastapi = "^0.48b0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"
opentelemetry-instrumentation-httpx = "^0.48b0"
structlog = "^24.1.0"

# Scheduling
apscheduler = "^3.10.4"

# Utils
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
email-validator = "^2.1.1"
pytz = "^2024.1"
uuid6 = "^2024.1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
factory-boy = "^3.3.0"
faker = "^25.1.0"
moto = {extras = ["s3"], version = "^5.0.0"}
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
