[metadata]
name = rula-gtm-agent
version = 0.1.0
description = Revenue intelligence multi-agent prototype for Rula case study
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = .
python_requires = >=3.11
packages = find_namespace:
install_requires =
    pydantic>=2.7.0
    streamlit>=1.37.0
    anthropic>=0.39.0
    google-genai>=1.0.0
    pyyaml>=6.0.0

[options.packages.find]
where = .
include = src*
namespaces = True

[options.extras_require]
dev =
    pytest>=8.0.0
    ruff>=0.8.0
